# gatewaygui

./: .gitignore  DEV.md  LICENSE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.lingma/rules/: important_rule.md
docs/: api.md
gateway/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  README.md  tauri.conf.json
gateway/.cargo/: config.toml
gateway/.github/workflows/: ci.yml  mobile.yml  performance.yml  release.yml
gateway/benches/: performance_benchmarks.rs
gateway/capabilities/: default.json
gateway/certs/: ca.crt  client.crt  client.key  server.crt
gateway/docs/: API.md  BUILD.md  CICD.md  DEPLOYMENT.md  OVERVIEW.md  PERFORMANCE.md
gateway/examples/: basic_usage.rs  cache_demo.rs  cache_demo_fixed.rs  cache_demo_simple.rs  performance_demo.rs  udp_demo.rs
gateway/icons/: icon.icns
gateway/indices/: test_mount.index
gateway/src/: cache.rs  gateway.rs  lib.rs  main.rs  network.rs  performance.rs  protocol.rs  registry.rs  security.rs  tauri_api.rs  tauri_api_tests.rs  tls.rs  udp_protocol.rs
gateway/src-tauri/: Cargo.toml
gateway/src-tauri/src/: lib.rs  main.rs  tauri_commands.rs
gateway/src/gateway/: cache.rs  compression.rs  gateway.rs  mod.rs  mount.rs  network.rs  performance.rs  protocol.rs  registry.rs  tauri_api.rs  tauri_api_tests.rs  tls.rs  udp_protocol.rs
gateway/src/plugins/: file_manager.rs  mod.rs
gateway/tests/: integration_tests.rs  security_tests.rs  stress_tests.rs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/certs/: ca.crt
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/gateway/: mod.rs  network.rs  performance.rs  protocol.rs  registry.rs  security.rs  tauri_api.rs  tls.rs
src/components/: AppSidebar.vue  AppTopbar.vue  ThemeSwitch.vue
src/i18n/locales/: en.json  zh.json
src/lib/: config.ts  gatewayApi.ts
src/pages/: MountDirectory.vue  Receive.vue  SelectDevice.vue  Send.vue  SendFile.vue  home.vue  settings.vue
src/router/: index.ts
