[package]
name = "wdic-gateway"
version = "0.2.1"
edition = "2021"
description = "基于 QUIC + UDP 双协议的本地网关实现，提供 P2P 网络发现、目录挂载、文件传输和智能搜索功能"
authors = ["Local Gateway Team"]
license = "MIT"
homepage = "https://github.com/Local-gateway/gateway"
repository = "https://github.com/Local-gateway/gateway"
documentation = "https://docs.rs/wdic-gateway"
keywords = ["gateway", "quic", "udp", "p2p", "network", "discovery", "broadcast"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
bincode = "2.0.1"
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
fs_extra = "1.3.0"
if-addrs = "0.14.0"
log = "0.4.28"
once_cell = "1.20.2"
quiche = { version = "0.24.6", default-features = false, features = ["boringssl-vendored"] }
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
sysinfo = "0.37.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-metrics = "0.4.5"
tokio-util = "0.7.16"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
ahash = { version = "0.8.12", features = ["serde"] }
smallvec = { version = "1.15.1", features = ["serde"] }
zstd = "0.13.3"
sha2 = "0.10.9"
rand = "0.9.2"
crossbeam = "0.8.4"
atomic_refcell = "0.1.13"
dashmap = "6.1.0"
tauri = "2.8.5"
tauri-plugin-shell = "2.3.1"

# Use boringssl-vendored for all platforms to avoid OpenSSL dependency issues
# The vendored version builds BoringSSL from source and is more portable

[dev-dependencies]
criterion = "0.7.0"
serial_test = "3.2.0"
tempfile = "3.22.0"
tokio-test = "0.4.4"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
