[package]
name = "tauriv2-vue-desktop-starter"
version = "0.13.0"
description = "A Tauri v2 Vue Desktop Starter"
authors = [ "you" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauriv2_vue_desktop_starter_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-store = "2.4.0"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-devtools = "2.0.1"
tauri-plugin-log = "2.7.0"
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-dialog = "2"
rcgen = "0.14.5"
ring = "0.17.14"
x509-parser = "0.18.0"
rustls-pki-types = "1.12.0"
time = "0.3.44"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.4"

# 网关依赖
anyhow = "1.0.99"
base64 = "0.22.1"
bincode = "2.0.1"
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
fs_extra = "1.3.0"
if-addrs = "0.14.0"
log = "0.4.28"
once_cell = "1.20.2"
quiche = { version = "0.24.6", default-features = false, features = ["boringssl-vendored"] }
serde_json = "1.0.144"
sysinfo = "0.37.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-metrics = "0.4.5"
tokio-util = "0.7.16"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
ahash = { version = "0.8.12", features = ["serde"] }
smallvec = { version = "1.15.1", features = ["serde"] }
zstd = "0.13.3"
sha2 = "0.10.9"
rand = "0.9.2"
crossbeam = "0.8.4"
atomic_refcell = "0.1.13"
dashmap = "6.1.0"
tempfile = "3"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# https://tauri.app/concept/size/
[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
